welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: too many arguments for method isFacingTrail: ()Boolean
   		if (isFacingTrail(y)== true) {
                                 ^SlugSnail:28: error: not found: value c
    		if (getCouleurSol()== c) {
                                      ^